static/css/register,login.css
a {
    left: 50%;
}

body {
    background-color: #e0e0e0;
    background-clip: padding-box;
    position: relative;
    top: 3em;
    display: block;
    text-align: center;
    margin: auto;
    width: 40%;
    height: 30em;
}

.topBox,
.backBox {
    width: 100%;
    min-height: 8em;
    background-color: #cc9900;
    background-clip: border-box;
    position: absolute;
    padding-top:0em;
    display:flex;
    justify-content: center;
    z-index: -1;
}

.backBox {
    height: 100%;
    background-color: #ededed;
    z-index: -2;
}

form {
    padding-top: 10%;
    display: block;
}

input,
textarea,
select,
button {
    width: 160px;
    height: 10px;
    margin: auto;
    margin-bottom: 10px;
    padding: 10px;
    background-color: inherit;
    border: unset;
    border-bottom: 1px solid #555;
    border-radius: 0px;
}

button[type=submit] {
    width: 20%;
    height: 20px;
    height: fit-content;
    background-color: #663366;
}

button[type=submit]:hover {
    background-color: #442344;
}

h1,
h5 {
    position: relative;
    top: 1em;
    padding-bottom: 0px;
    color: #f5f5f5;
}

.form{
    padding-top: 5em;
    justify-content: center;
}

.home {
    font-size: larger;
    font-weight: 600;
    position: absolute;
    top: 92%;
    left: 2%;
}

.homeIcon{
    position: relative;
    top: 0.25em;
}

.logoCircle {
    display: inline-block;
    height: 30px;
    width: 30px;
    background-color: #cc9900;
    border: 3px solid #ededed;
    border-radius: 50%;
    position:absolute;
    bottom:-17px;
    padding-bottom: 0;
}

.logo {
    display: inline-block;
    height: 30px;
    width: 30px;
    position: absolute;
    left: 0%;
}

